--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Portfolio | J-D25</title>
   </head>
   <body>
     <noscript>JavaScript doit être activé pour visiter ce site.</noscript>
-    <div id="root"></div>
+    <header id="header"></header>
+    <main id="root"></main>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
