public/index.html : remove header, main, footer

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,6 @@
   </head>
   <body>
     <noscript>JavaScript doit être activé pour visiter ce site.</noscript>
-    <div id="container">
-      <header id="header"></header>
-      <main id="root"></main>
-      <footer id="footer"></footer>
-    </div>
+    <div id="container"></div>
   </body>
 </html>
