--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="J-D25">
     <meta name="description" content="Bienvenue sur le site portfolio de J-D25 alias Jessy-Daniel."/>
+    <!-- HTML Meta Tags -->
+    <meta property="og:url" content="https://portfoliojd.promo-159.codeur.online/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Portfolio | J-D25">
+    <meta property="og:description" content="Bienvenue sur le site portfolio de J-D25 alias Jessy-Daniel.">
+    <meta property="og:image" content="https://portfoliojd.promo-159.codeur.online/socials.png">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
