FIX - public/index.html : correction lien

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="J-D25">
     <meta name="description" content="Bienvenue sur le site portfolio de J-D25 alias Jessy-Daniel."/>
     <!-- HTML Meta Tags -->
-    <meta property="og:url" content="https://portfoliojd.promo-159.codeur.online/">
+    <meta property="og:url" content="%PUBLIC_URL%/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Portfolio | J-D25">
     <meta property="og:description" content="Bienvenue sur le site portfolio de J-D25 alias Jessy-Daniel.">
-    <meta property="og:image" content="https://portfoliojd.promo-159.codeur.online/socials.png">
+    <meta property="og:image" content="%PUBLIC_URL%/socials.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
